# grant_keeper

./: .gitignore  README.md  firebase-rtdb.rules.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: grant-keeper-spec.md  grant-source-registry.md  grant-source-scrape-priority.md  grant-source-seed-records.json  workspace-pilot-execution-plan.md
docx-sidecar/: README.md  package-lock.json  package.json  worker.mjs  worker.test.mjs
scripts/: start-desktop.ps1  start-vite.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  db.rs  draft_schema.rs  firebase.rs  google_auth.rs  main.rs  models.rs  rtdb.rs  source_adapters.rs  state.rs
src-tauri/src/ai/: client.rs  mod.rs  prompts.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ingest/: mod.rs  web_adapters.rs
src/__tests__/: draftSchema.test.ts  performance.test.ts  security.test.ts  shell.test.ts
src/components/: AccountMenu.tsx  DraftEditor.tsx  EmberLogo.tsx  FieldTip.tsx  FirstRunPrompt.tsx  GrantContextBanner.tsx  GrantDetailView.tsx  GrantKeeperLogo.tsx  HelpDrawer.tsx  SectionCard.tsx  Sidebar.tsx  icons.tsx  ui.tsx
src/hooks/: useAutosave.ts  useNavigation.ts  useWorkspaceData.ts
src/lib/: draftSchema.ts  shell.ts  tauri.ts  types.ts
src/pages/: DashboardPage.tsx  DevToolsPage.tsx  DraftsPage.tsx  GrantDetailPage.tsx  GrantDiscoveryPage.tsx  OrganizationPage.tsx  SetupPage.tsx  WatchlistPage.tsx
