[package]
name = "grant-keeper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["serde", "v4"] }
urlencoding = "2"
csv = "1"
dotenvy = "0.15"
jsonwebtoken = "9"
rtdb-rs = { version = "0.3.1", path = "../../firebase-rtdb-rs" }
scraper = "0.24"
sha2 = "0.10"
url = "2"
base64 = "0.22"
webbrowser = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "process"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
